@@ -7,6 +7,7 @@
 
 import { BeforeUnloadEvent, document, HTMLElement, HTMLFormElement, Window } from '@ephox/dom-globals';
 import { Arr, Obj, Type } from '@ephox/katamari';
+import { Attr, Element as SugarElement } from '@ephox/sugar';
 import * as ErrorReporter from '../ErrorReporter';
 import * as FocusController from '../focus/FocusController';
 import AddOnManager from './AddOnManager';
@@ -373,9 +374,8 @@ const EditorManager: EditorManager = {
       ' '
     );
 
-    const isInvalidInlineTarget = (settings: RawEditorSettings, elm: HTMLElement) => {
-      return settings.inline && elm.tagName.toLowerCase() in invalidInlineTargets;
-    };
+    const isInvalidInlineTarget = (settings: RawEditorSettings, elm: HTMLElement) =>
+      settings.inline && elm.tagName.toLowerCase() in invalidInlineTargets;
 
     const createId = function (elm: HTMLElement) {
       let id = elm.id;
@@ -493,7 +493,16 @@ const EditorManager: EditorManager = {
       let targets: HTMLElement[];
 
       const createEditor = function (id: string, settings: RawEditorSettings, targetElm: HTMLElement) {
+        const targetElmWrap = SugarElement.fromDom(targetElm);
+        const tagSnapshot = Attr.clone(targetElmWrap);
+
         const editor: Editor = new Editor(id, settings, self);
+        editor.on('remove', () => {
+          Arr.each(Arr.map(targetElm.attributes, (attr) => attr.name), (name: string) => {
+            Attr.remove(targetElmWrap, name);
+          });
+          Attr.setAll(targetElmWrap, tagSnapshot);
+        });
 
         editors.push(editor);
 
